Add the JaCoCo plugin for generae coverage reports